# microTLS

./: Cargo.toml  SerializedTLS.txt  found_root_id.txt  serializedSession1.txt
src/: format.rs  main.rs  network.rs  tls_session.rs
src/tls_session/: aes256gcm.rs  certs.rs  hkdf_sha256.rs  x25519.rs
src/tls_session/certs/: ecdsa.rs  ed25519.rs  rsa.rs
