[package]
name = "micro_tls"
version = "0.1.0"
authors = ["bbfilipp <bbfilipp@ya.ru>"]
edition = "2021"



[dependencies]

num-bigint = "0.2.2"
num-traits = "0.2.8"
num-integer = "0.1.46"

hex = "0.4"
base64url = "0.1.0"
chrono = "0.4"

rand = "0.8.5"
rand_core = {version = "0.6", features = ["getrandom"] }

